<resources>
    <string name="app_name">CouchPotato</string>
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="about">About</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="sign_out">Sign out</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_overwritten">%d entries were overwritten with imported data</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature.</string>
    <string name="steps">steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_text_links">This app was created by Thomas Hoffmann (<a href="https://www.j4velin.de">www.j4velin.de</a>) and uses <a href="https://github.com/blackfizz/EazeGraph">EazeGraph</a> by Paul Cech and <a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a> by Sergey Margaritov.\n\nPedometer is open source! Get the code and the full list of contributors from <a href="https://github.com/j4velin/Pedometer">GitHub</a>.\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Split count</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ispaused">Pedometer is paused</string>
    <string name="pause_on_power_title">Pause while charging</string>
    <string name="pause_on_power_summary">Pause Pedometer while device is charging</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="leaderboard_most_steps_walked">Most Walked</string>
    <string name="leaderboard_most_steps_walked_in_one_day">Most Walked In A Day</string>
    <string name="leaderboard_highest_average">Highest Average</string>

    <string-array name="titles">
        <item>D</item>
        <item>W</item>
        <item>M</item>
        <item>Y</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_subtext">Keep me walking, please?</string>
    <string name="signup">Sign up</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="steps_considered">10,000 steps daily is considered healthy.</string>
    <string name="next">Next</string>
    <string name="i_will_walk">I will walk</string>
    <string name="steps_daily">steps daily.</string>
    <string name="number_of_steps">Number of steps</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="note_buddy">Your buddy will be emailed every time you miss your goal.\n\nWe recommend someone you trust and committed to your wellbeing like a spouse, coach, or buddy!</string>
    <string name="buddy_email">Buddy Email</string>
    <string name="desc_allset">Your buddy will be emailed every time you miss your goal. Good luck.</string>
    <string name="potato">Potatoboard</string>
    <string name="couch">Couch</string>
    <string name="swipe_down">Swipe down to return</string>
    <string name="swipe_up">Swipe up for record</string>
    <string name="potato_note">The laziest couch potato appears FIRST. Don’t want to be featured here? <b>Get walking!</b></string>
    <string name="note_refer">You and your friend both score a free month when they sign up through your unique referral link. \n\nWhy? Because we give a damn about your health. \n\nOffer valid up to two sign ups per account.</string>
    <string name="get_free">Get 1 free month!</string>
    <string name="text_tap_for_referral">Tap to copy your unique referral link:</string>
    <string name="share">Share</string>
    <string name="subscribe">Subscribe</string>
    <string name="refer">Refer</string>
    <string name="logout">Log out</string>
    <string name="help">Help</string>

    <string name="refer_share_fb">I don’t want to be a couch potato anymore. Join me  as I commit to living an active life through accountability! \nWe both get a free month— sign up now.</string>
    <string name="refer_share_email_subject">Giving up my couch potato lifestyle.</string>
    <string name="refer_share_email_body">Hey, I don’t want to be a couch potato anymore. Join me as I commit to living an active life through accountability! We both get a free month— sign up now.</string>
    <string name="error_fb_not_installed"><b>Facebook not installed. </b>\nDo you want to share using other application?</string>
    <string name="account">Account</string>
    <string name="back">Back</string>
    <string name="saveStepsToDevice">Save</string>
    <string name="notify_daily">Notify partner daily</string>
    <string name="notify_weekly">Notify partner weekly</string>
    <string name="save">Save</string>
    <string name="daily_goal">Daily goal</string>
    <string name="goals_note">Weekly and monthly goals are based on daily step goal.</string>
    <string name="goal_updated_text">You updated your goal to </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="message_low_steps_count">We can do better than this, can\'t we?</string>
    <string name="done">Done</string>
    <string name="daily_goals_missed">Daily Goals Missed</string>
    <string name="confirm_to_save">Confirm to save</string>
    <string name="steps_missed">Steps Missed</string>
    <string name="subscription_expired_title">Free Trial Over</string>
    <string name="subscription_expired_body">Subscribe now for $14.99 per year and enjoy the benefits of living an active and accountable life! </string>
    <string name="subscribe_body">Subscribe now for $14.99 per year and enjoy the benefits of living an active and accountable life! </string>
    <string name="subscribe_title">Subscribe Now</string>
    <string name="signup_error_message">* Sorry! The email address is already taken</string>
    <string name="signin_error_message">* Login Error</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="send">Send</string>
    <string name="set_new_password">Set New Password</string>
    <string name="verify">Verify</string>
    <string name="buddy">Buddy</string>
    <string name="logout_message">Until we successfully save your steps to server.You can retrieve them later.</string>
    <string name="logout_title">Please Wait...</string>
</resources>
