<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_to_save"
        android:textColor="@color/pureWhite"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_popup_password"
        style="@style/editTextStyle"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_popup_verify"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/pureWhite" />
</LinearLayout>