<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/gradient_background">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_top"
        android:paddingTop="@dimen/padding_top">

        <ImageView
            android:id="@+id/signup_image_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signup_title_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/couchpotato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_image_app_logo" />

        <TextView
            android:id="@+id/signup_title_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_subtext"
            android:textColor="@color/pureWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_title_text" />

        <EditText
            android:id="@+id/signup_input_name"
            style="@style/editTextStyle"
            android:layout_marginTop="24dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_title_subtext" />

        <EditText
            android:id="@+id/signup_input_email"
            style="@style/editTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_input_name" />

        <EditText
            android:id="@+id/signup_input_password"
            style="@style/editTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_input_email" />

        <EditText
            android:id="@+id/signup_input_confirm_password"
            style="@style/editTextStyle"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_input_password" />

        <TextView
            android:id="@+id/signup_txt_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/signup_error_message"
            android:textColor="#f00"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/signup_input_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/signup_input_confirm_password" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/bg_button"
            android:padding="12dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_txt_error_message" />

        <ProgressBar
            android:id="@+id/signup_progressbar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:elevation="2dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toTopOf="@+id/btn_signup" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
