<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true">

    <TextView
        android:id="@+id/navigation_settings"
        style="@style/blockTextStyle"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:gravity="end"
        android:text="@string/settings"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TextView
        android:id="@+id/navigation_refer"
        style="@style/blockTextStyle"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:gravity="end"
        android:text="@string/refer"
        app:layout_constraintTop_toBottomOf="@id/navigation_settings" />
-->
    <TextView
        android:id="@+id/navigation_subscribe"
        style="@style/blockTextStyle"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:gravity="end"
        android:text="@string/subscribe"
        app:layout_constraintTop_toBottomOf="@id/navigation_settings" />

    <TextView
        android:id="@+id/navigation_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="end"
        android:text="@string/logout"
        android:textColor="@color/pureWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent" />

    <TextView
        android:id="@+id/navigation_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="end"
        android:text="@string/help"
        android:textColor="@color/pureWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/navigation_logout" />

</android.support.constraint.ConstraintLayout>