<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    android:paddingTop="@dimen/padding_top">

    <TextView
        android:id="@+id/txt_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        android:textColor="@color/pureWhite"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/input_current_password" />

    <EditText
        android:id="@+id/input_current_password"
        style="@style/editTextStyle"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_current_password" />

    <TextView
        android:id="@+id/txt_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        android:textColor="@color/pureWhite"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/input_new_password"
        app:layout_constraintTop_toBottomOf="@id/input_current_password" />

    <EditText
        android:id="@+id/input_new_password"
        style="@style/editTextStyle"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_new_password" />

    <EditText
        android:id="@+id/input_confirm_new_password"
        style="@style/editTextStyle"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_new_password" />

    <Button
        android:id="@+id/btn_change_password"
        style="@style/buttonStyle"
        android:layout_marginTop="16dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_new_password" />

    <ProgressBar
        android:id="@+id/progress_change_password"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:elevation="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/btn_change_password"
        app:layout_constraintEnd_toEndOf="@id/btn_change_password"
        app:layout_constraintStart_toStartOf="@id/btn_change_password"
        app:layout_constraintTop_toTopOf="@id/btn_change_password" />
</android.support.constraint.ConstraintLayout>